<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickSiguiente"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="74dp"
            android:layout_height="30dp"
            android:text="@string/activity_text_view_nombre"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ActivitytextViewNombre"
            android:layout_width="192dp"
            android:layout_height="30dp"
            android:layout_marginStart="15px"
            android:textColor="@color/purple_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="76dp"
            android:layout_height="29dp"
            android:text="@string/activity_text_view_apellido"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ActivitytextViewApellido"
            android:layout_width="194dp"
            android:layout_height="30dp"
            android:layout_marginStart="15px"
            android:textColor="@color/purple_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:text="@string/activity_text_view_base"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ActivitytextViewBase"
            android:layout_width="190dp"
            android:layout_height="29dp"
            android:layout_marginStart="15px"
            android:textColor="@color/teal_700" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/activity_text_view_exponente"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activityTextViewExponente"
            android:layout_width="189dp"
            android:layout_height="30dp"
            android:layout_marginStart="15px"
            android:textColor="@color/teal_700" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/activity_text_view_factorial"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ActivitytextViewFactorial"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_marginStart="15px"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/Activity_textView_Numero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:text="@string/activity_text_view_potencia"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ActivitytextViewPotencia"
            android:layout_width="189dp"
            android:layout_height="29dp"
            android:layout_marginStart="15px"
            android:textColor="@color/teal_700" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activitybuttonSiguiente"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:onClick="onClickSiguiente"
            android:text="@string/activity_button_Siguiente" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMostrarResultados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/activity_button_MostrarResultado" />
    </LinearLayout>

</LinearLayout>