<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tercera_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/activity3_text_view_Nombre" />

        <TextView
            android:id="@+id/activity3textViewNombre"
            android:layout_width="195dp"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/activity3_text_view_Apellido" />

        <EditText
            android:id="@+id/editTextApellidoActiv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/activity3_text_view_Base" />

        <TextView
            android:id="@+id/activity3textViewBase"
            android:layout_width="195dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/activity3_text_view_Exponete" />

        <EditText
            android:id="@+id/editTextExponenteActivy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/activity3_text_view_Numero" />

        <EditText
            android:id="@+id/editTextNumeroActivi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/Activi3buttonCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Cerrar"
            android:text="@string/activity3_button_Cerrar" />
    </LinearLayout>

</LinearLayout>