<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickSiguiente"
    android:orientation="vertical"
    tools:context=".SegundaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/activity2_text_view_Nombre" />

        <EditText
            android:id="@+id/Acti2editTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/activity2_text_view_base" />

        <EditText
            android:id="@+id/Activity2editTextTextPersonBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Acti2buttonSiguiente"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="onClickSiguiente"
            android:text="@string/activity2_button_Siguiente" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Activbutton5Cerrar"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/activity2_button_Cerrar" />
    </LinearLayout>

</LinearLayout>